[gd_scene load_steps=41 format=3 uid="uid://diqcqhhh7hcmy"]

[ext_resource type="Script" path="res://Scenes/GunSelectScreen/gun_select_scene_script.gd" id="1_0yuvc"]
[ext_resource type="Script" path="res://Scenes/GunSelectScreen/start_level_script.gd" id="1_4s7n6"]
[ext_resource type="Script" path="res://Scenes/GunSelectScreen/button_script.gd" id="1_c5pn4"]
[ext_resource type="Texture2D" uid="uid://le28kvrnwj14" path="res://Scenes/GunSelectScreen/start button.png" id="2_713q0"]
[ext_resource type="Texture2D" uid="uid://btsusdhu7nk5v" path="res://Scenes/GunSelectScreen/background.png" id="2_wbldg"]
[ext_resource type="Texture2D" uid="uid://dbku15fyjknaj" path="res://Scenes/GunSelectScreen/start button highlight.png" id="4_84ndr"]
[ext_resource type="Texture2D" uid="uid://dq5l1bbpd2klw" path="res://Scenes/GunSelectScreen/dagger button highlight.png" id="7_06w2l"]
[ext_resource type="PackedScene" uid="uid://bqd3mql8a8feh" path="res://Scenes/GunSelectScreen/WeaponSelectButton.tscn" id="7_12d60"]
[ext_resource type="PackedScene" uid="uid://cleirbyd7kb75" path="res://Scenes/GunSelectScreen/InventoryButtonScene.tscn" id="7_shw18"]
[ext_resource type="Texture2D" uid="uid://dx8eaord5dax5" path="res://Scenes/Weapons/hideTexture.png" id="8_xmaa4"]
[ext_resource type="PackedScene" uid="uid://dsafi7m7f0lf7" path="res://Scenes/Weapons/dagger.tscn" id="9_ovotd"]
[ext_resource type="AudioStream" uid="uid://co3dvbugwpq3s" path="res://Scenes/GunSelectScreen/Gun_Select_audio.wav" id="10_rc4ro"]
[ext_resource type="Texture2D" uid="uid://b13u3l6fk32mg" path="res://Scenes/GunSelectScreen/submachinegun button.png" id="12_luffs"]
[ext_resource type="Texture2D" uid="uid://baftudd72c68s" path="res://Scenes/GunSelectScreen/submachinegun button highlight.png" id="13_21dch"]
[ext_resource type="Texture2D" uid="uid://cb1w07avttfuv" path="res://Scenes/GunSelectScreen/button1.png" id="13_f86g5"]
[ext_resource type="Texture2D" uid="uid://ct6twxlmggtgs" path="res://Scenes/Weapons/dagger.png" id="14_fvd13"]
[ext_resource type="Texture2D" uid="uid://cb7vh7h5vujkf" path="res://More art/Guns/submachine gun.png" id="14_jjo81"]
[ext_resource type="Texture2D" uid="uid://dfx2lpwf1lrtr" path="res://Scenes/GunSelectScreen/button2.png" id="15_fof0l"]
[ext_resource type="PackedScene" uid="uid://bcql748qrufws" path="res://Scenes/Weapons/submachinegun.tscn" id="15_k683e"]
[ext_resource type="Texture2D" uid="uid://8b3wbplsiqyp" path="res://Scenes/GunSelectScreen/dagger button.png" id="16_1kqk6"]
[ext_resource type="Texture2D" uid="uid://df41lh2b47nd8" path="res://Scenes/GunSelectScreen/button3.png" id="16_au88s"]
[ext_resource type="Texture2D" uid="uid://bmijbr7xpyiuh" path="res://Scenes/GunSelectScreen/silentpistol button.png" id="16_dr7e6"]
[ext_resource type="Texture2D" uid="uid://2i7aaywjv2mw" path="res://Scenes/GunSelectScreen/button4.png" id="17_3umhq"]
[ext_resource type="Texture2D" uid="uid://bhq1tuftoohxg" path="res://Scenes/GunSelectScreen/button1 highlight.png" id="17_7m4ea"]
[ext_resource type="Texture2D" uid="uid://b2xe15xyiipjd" path="res://More art/Guns/silent pistol.png" id="17_gs8i2"]
[ext_resource type="Texture2D" uid="uid://d1mw8mo2nx1va" path="res://Scenes/GunSelectScreen/silentpistol button highlight.png" id="17_ltpt5"]
[ext_resource type="Texture2D" uid="uid://bywd8wdg3g2yg" path="res://Scenes/GunSelectScreen/button5.png" id="18_hwgqp"]
[ext_resource type="PackedScene" uid="uid://cb3uhgu04ks5d" path="res://Scenes/Weapons/silent pistol/silentPistol.tscn" id="18_mhnbs"]
[ext_resource type="Texture2D" uid="uid://coi2axskgnbib" path="res://Scenes/GunSelectScreen/rifle button.png" id="20_t4ydm"]
[ext_resource type="Texture2D" uid="uid://drf3jyfankcxg" path="res://Scenes/GunSelectScreen/button2 highlight.png" id="20_uxart"]
[ext_resource type="Texture2D" uid="uid://ceb8l7j7nchrv" path="res://Scenes/Weapons/assault rifle/assault rifle.png" id="21_0hgjg"]
[ext_resource type="Texture2D" uid="uid://dht2imluhh0xw" path="res://Scenes/GunSelectScreen/rifle button highlight.png" id="21_yh6m3"]
[ext_resource type="Texture2D" uid="uid://cerxcjnswi4pt" path="res://Scenes/GunSelectScreen/button3 highlight.png" id="22_pc8cf"]
[ext_resource type="PackedScene" uid="uid://bw5x10g126c5l" path="res://Scenes/Weapons/assault rifle/AssaultRifle.tscn" id="22_qxv30"]
[ext_resource type="Texture2D" uid="uid://cnfdag1ws0yhl" path="res://Scenes/GunSelectScreen/button4 highlight.png" id="24_ojvfr"]
[ext_resource type="Texture2D" uid="uid://bvo0js1dpsfda" path="res://Scenes/GunSelectScreen/machinegun button.png" id="24_v3810"]
[ext_resource type="Texture2D" uid="uid://d3q0gpww6kpn0" path="res://More art/Guns/machine gun.png" id="25_28j86"]
[ext_resource type="Texture2D" uid="uid://ceme6gdnkag1t" path="res://Scenes/GunSelectScreen/machinegun button highlight.png" id="25_gyuxu"]
[ext_resource type="Texture2D" uid="uid://buixnqnlyaenq" path="res://Scenes/GunSelectScreen/button5 highlight.png" id="26_wcima"]
[ext_resource type="PackedScene" uid="uid://bod3buwnqo5rm" path="res://Scenes/Weapons/machine gun/machineGun.tscn" id="27_2cecl"]

[node name="GunSelectScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0yuvc")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_wbldg")

[node name="StartLevelButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 1076.0
offset_top = 576.0
offset_right = 1140.0
offset_bottom = 640.0
texture_normal = ExtResource("2_713q0")
texture_hover = ExtResource("4_84ndr")
script = ExtResource("1_4s7n6")

[node name="GoToLevelSelectButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 577.0
offset_right = 74.0
offset_bottom = 641.0
texture_normal = ExtResource("2_713q0")
texture_hover = ExtResource("4_84ndr")
flip_h = true
script = ExtResource("1_c5pn4")
levelPath = NodePath("res://Scenes/LevelSelectScreen/LevelSelectScene.tscn")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -595.5
offset_top = -144.0
offset_right = 595.5
offset_bottom = 144.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="GridContainer" type="GridContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/GridContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="WeaponSelectButton2" parent="MarginContainer/HBoxContainer/GridContainer/HBoxContainer" instance=ExtResource("7_12d60")]
layout_mode = 2
texture_normal = ExtResource("16_1kqk6")
texture_hover = ExtResource("7_06w2l")
weaponTexture = ExtResource("14_fvd13")
weaponScenePacked = ExtResource("9_ovotd")

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/GridContainer/HBoxContainer/WeaponSelectButton2"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.019
anchor_top = 0.071
anchor_right = 0.019
anchor_bottom = 0.071
offset_left = 0.0409999
offset_top = 0.0359998
offset_right = 82.041
offset_bottom = 72.036
texture = ExtResource("14_fvd13")
expand_mode = 1
stretch_mode = 5

[node name="WeaponSelectButton3" parent="MarginContainer/HBoxContainer/GridContainer/HBoxContainer" instance=ExtResource("7_12d60")]
layout_mode = 2
texture_normal = ExtResource("12_luffs")
texture_hover = ExtResource("13_21dch")
weaponTexture = ExtResource("14_jjo81")
weaponScenePacked = ExtResource("15_k683e")

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/GridContainer/HBoxContainer/WeaponSelectButton3"]
layout_mode = 0
offset_left = 6.0
offset_right = 89.0
offset_bottom = 81.0
texture = ExtResource("14_jjo81")
expand_mode = 2
stretch_mode = 5

[node name="WeaponSelectButton4" parent="MarginContainer/HBoxContainer/GridContainer/HBoxContainer" instance=ExtResource("7_12d60")]
layout_mode = 2
texture_normal = ExtResource("16_dr7e6")
texture_hover = ExtResource("17_ltpt5")
weaponTexture = ExtResource("17_gs8i2")
weaponScenePacked = ExtResource("18_mhnbs")

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/GridContainer/HBoxContainer/WeaponSelectButton4"]
layout_mode = 0
offset_left = 5.0
offset_top = 7.0
offset_right = 105.0
offset_bottom = 81.0
texture = ExtResource("17_gs8i2")
expand_mode = 2
stretch_mode = 5

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/HBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 20

[node name="WeaponSelectButton5" parent="MarginContainer/HBoxContainer/GridContainer/HBoxContainer2" instance=ExtResource("7_12d60")]
layout_mode = 2
texture_normal = ExtResource("20_t4ydm")
texture_hover = ExtResource("21_yh6m3")
weaponTexture = ExtResource("21_0hgjg")
weaponScenePacked = ExtResource("22_qxv30")

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/GridContainer/HBoxContainer2/WeaponSelectButton5"]
layout_mode = 0
offset_left = 5.0
offset_top = 7.0
offset_right = 105.0
offset_bottom = 81.0
scale = Vector2(0.84, 0.84)
texture = ExtResource("21_0hgjg")
expand_mode = 2
stretch_mode = 5

[node name="WeaponSelectButton6" parent="MarginContainer/HBoxContainer/GridContainer/HBoxContainer2" instance=ExtResource("7_12d60")]
layout_mode = 2
texture_normal = ExtResource("24_v3810")
texture_hover = ExtResource("25_gyuxu")
weaponTexture = ExtResource("25_28j86")
weaponScenePacked = ExtResource("27_2cecl")

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/GridContainer/HBoxContainer2/WeaponSelectButton6"]
layout_mode = 0
offset_left = 8.0
offset_top = 12.0
offset_right = 86.0
offset_bottom = 77.0
texture = ExtResource("25_28j86")
expand_mode = 2
stretch_mode = 5

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.9
anchor_right = 1.0
anchor_bottom = 0.9
offset_top = -143.2
offset_bottom = -8.20001
grow_horizontal = 2
grow_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer2"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="InventoryButtonScene" parent="MarginContainer2/HBoxContainer" instance=ExtResource("7_shw18")]
layout_mode = 2
texture_normal = ExtResource("13_f86g5")
texture_hover = ExtResource("17_7m4ea")
hideTexture = ExtResource("8_xmaa4")

[node name="TextureRect" type="TextureRect" parent="MarginContainer2/HBoxContainer/InventoryButtonScene"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.286
anchor_top = 0.024
anchor_right = 0.286
anchor_bottom = 0.024
offset_left = -0.0600014
offset_top = 0.2
offset_right = 144.94
offset_bottom = 121.2
expand_mode = 2
stretch_mode = 5

[node name="InventoryButtonScene2" parent="MarginContainer2/HBoxContainer" instance=ExtResource("7_shw18")]
layout_mode = 2
texture_normal = ExtResource("15_fof0l")
texture_hover = ExtResource("20_uxart")
hideTexture = ExtResource("8_xmaa4")

[node name="TextureRect" type="TextureRect" parent="MarginContainer2/HBoxContainer/InventoryButtonScene2"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.286
anchor_top = 0.024
anchor_right = 0.286
anchor_bottom = 0.024
offset_left = -0.0600014
offset_top = 0.2
offset_right = 144.94
offset_bottom = 121.2
expand_mode = 2
stretch_mode = 5

[node name="InventoryButtonScene3" parent="MarginContainer2/HBoxContainer" instance=ExtResource("7_shw18")]
layout_mode = 2
texture_normal = ExtResource("16_au88s")
texture_hover = ExtResource("22_pc8cf")
hideTexture = ExtResource("8_xmaa4")

[node name="TextureRect" type="TextureRect" parent="MarginContainer2/HBoxContainer/InventoryButtonScene3"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.286
anchor_top = 0.024
anchor_right = 0.286
anchor_bottom = 0.024
offset_left = -0.0600014
offset_top = 0.2
offset_right = 144.94
offset_bottom = 121.2
expand_mode = 2
stretch_mode = 5

[node name="InventoryButtonScene4" parent="MarginContainer2/HBoxContainer" instance=ExtResource("7_shw18")]
layout_mode = 2
texture_normal = ExtResource("17_3umhq")
texture_hover = ExtResource("24_ojvfr")
hideTexture = ExtResource("8_xmaa4")

[node name="TextureRect" type="TextureRect" parent="MarginContainer2/HBoxContainer/InventoryButtonScene4"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.286
anchor_top = 0.024
anchor_right = 0.286
anchor_bottom = 0.024
offset_left = -0.0600014
offset_top = 0.2
offset_right = 144.94
offset_bottom = 121.2
expand_mode = 2
stretch_mode = 5

[node name="InventoryButtonScene5" parent="MarginContainer2/HBoxContainer" instance=ExtResource("7_shw18")]
layout_mode = 2
texture_normal = ExtResource("18_hwgqp")
texture_hover = ExtResource("26_wcima")
hideTexture = ExtResource("8_xmaa4")

[node name="TextureRect" type="TextureRect" parent="MarginContainer2/HBoxContainer/InventoryButtonScene5"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.286
anchor_top = 0.024
anchor_right = 0.286
anchor_bottom = 0.024
offset_left = -0.0600014
offset_top = 0.2
offset_right = 144.94
offset_bottom = 121.2
expand_mode = 2
stretch_mode = 5

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_rc4ro")
volume_db = -10.196
autoplay = true

[connection signal="pressed" from="StartLevelButton" to="StartLevelButton" method="_on_pressed"]
[connection signal="pressed" from="GoToLevelSelectButton" to="GoToLevelSelectButton" method="_on_pressed"]
[connection signal="selected" from="MarginContainer/HBoxContainer/GridContainer/HBoxContainer/WeaponSelectButton2" to="." method="_on_weapon_select_button_selected"]
[connection signal="selected" from="MarginContainer/HBoxContainer/GridContainer/HBoxContainer/WeaponSelectButton3" to="." method="_on_weapon_select_button_selected"]
[connection signal="selected" from="MarginContainer/HBoxContainer/GridContainer/HBoxContainer/WeaponSelectButton4" to="." method="_on_weapon_select_button_selected"]
[connection signal="selected" from="MarginContainer/HBoxContainer/GridContainer/HBoxContainer2/WeaponSelectButton5" to="." method="_on_weapon_select_button_selected"]
[connection signal="selected" from="MarginContainer/HBoxContainer/GridContainer/HBoxContainer2/WeaponSelectButton6" to="." method="_on_weapon_select_button_selected"]
[connection signal="selectedInventory" from="MarginContainer2/HBoxContainer/InventoryButtonScene" to="." method="_on_inventory_button_scene_selected_inventory"]
[connection signal="selectedInventory" from="MarginContainer2/HBoxContainer/InventoryButtonScene2" to="." method="_on_inventory_button_scene_selected_inventory"]
[connection signal="selectedInventory" from="MarginContainer2/HBoxContainer/InventoryButtonScene3" to="." method="_on_inventory_button_scene_selected_inventory"]
[connection signal="selectedInventory" from="MarginContainer2/HBoxContainer/InventoryButtonScene4" to="." method="_on_inventory_button_scene_selected_inventory"]
[connection signal="selectedInventory" from="MarginContainer2/HBoxContainer/InventoryButtonScene5" to="." method="_on_inventory_button_scene_selected_inventory"]
